--- a/fizzbuzz.html
+++ b/fizzbuzz.html
@@ -5,6 +5,7 @@
     <title>Fizz-Buzz</title>
 </head>
 <body>
+<a href="https://eloquentjavascript.net/02_program_structure.html#i_rebKE3gdjV">Exercise</a>
 <script type="application/javascript">
 
     const fizzBuzz = function () {
@@ -14,16 +15,16 @@
 
         for (let x = minNumber; x <= maxNumber; x++) {
 
-            if (x % 3 == 0 && x % 5 == 0) {
-                console.log(x, "Fizz - Buzz")
+            if (x % 3 === 0 && x % 5 === 0) {
+                console.log("Fizz - Buzz")
             } else {
 
-                if (x % 3 == 0) {
-                    console.log(x, "Fizz");
+                if (x % 3 === 0) {
+                    console.log("Fizz");
                 }
 
-                if (x % 5 == 0) {
-                    console.log(x, "Buzz");
+                if (x % 5 === 0) {
+                    console.log("Buzz");
                 }
             }
         }
